--- a/GitHubManager/GitHubManager.csproj
+++ b/GitHubManager/GitHubManager.csproj
@@ -43,11 +43,13 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
@@ -68,6 +70,12 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="AppPreferencesStorage.cs" />
+    <Compile Include="CredentialStorage.cs" />
+    <Compile Include="GitOperations.cs" />
+    <Compile Include="WindowSettingsStorage.cs" />
+    <Compile Include="GitHubRepository.cs" />
+    <Compile Include="GitHubUser.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
