--- a/GitHubManager/GitHubManager.csproj
+++ b/GitHubManager/GitHubManager.csproj
@@ -62,6 +62,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="LoadingWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -73,6 +77,10 @@
     <Compile Include="AppPreferencesStorage.cs" />
     <Compile Include="CredentialStorage.cs" />
     <Compile Include="GitOperations.cs" />
+    <Compile Include="LoadingWindow.xaml.cs">
+      <DependentUpon>LoadingWindow.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="WindowSettingsStorage.cs" />
     <Compile Include="GitHubRepository.cs" />
     <Compile Include="GitHubUser.cs" />
